<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">FINDIT MY</string>
    <string name="dialog_header">FINDIT</string>
    <string name="common_header_text_beta_version">BETA</string>
    <string name="test_string">kjfdklj lkjdfl </string>
    <string name="test_2linr_string"> jdfklj dfjkj dfkljdfkj</string>
    <string name="a_code_sent">A code has been sent to the mobile number</string>
    <string name="enter_activation_code">Please enter the code to authenticate your mobile number</string>
    <string name="validate">Validate</string>
    <string name="resend_code">Resend Code</string>
    <string name="please_confirm_mob">Please confirm your mobile number :</string>
    <string name="confirm">Confirm</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_text">This test application provided by Getit Transnational  is for illustrative purposes only and the data shown is not authentic/accurate and is dummy in nature. Getit makes no representation or warranty that this application will be suitable for the specified use without further testing or modification. </string>
    <string name="location_unavailable_switch_gps">Your current location is Temporarily unavailable, For better localized search please enable GPS satellites and Google location service in setting and launch the app again.</string>
    <string name="follow_us_colon">Follow us:</string>
    <string name="modify_to_filter">Modify the search to get filtered list</string>
    <string name="category_list_not_found">Insufficient information to process your request</string>
    <string name="record_found"><u>Record(s) Found Near You</u></string>
    <string name="deal_found">Deal(s) Found Near You</string>
    <string name="outlet_found">Outlet(s) Found Near You</string>
    <string name="category_deals">Featured Deals Category</string>
    <string name="cl_hot_deals">Hot Deals</string>
    <string name="cl_view_on_map">View on Map</string>
    <string name="cl_modify_search">Modify Search</string>
    <string name="cl_filter_by">Filter By</string>
    <string name="download_deal">The detail of this Deal has been sent to your phone number via a SMS.</string>
    <string name="enter_user_name">Please enter your Name.</string>
    <string name="enter_current_passward">Please enter Current Password.</string>
    <string name="password_cant_blank">Please enter passwords without blank space.</string>
    <string name="password_doesnt_match">New Password and Confirm Password should be same.</string>
    <string name="enter_new_confirm">Please enter New Password and Confirm Password.</string>
    <string name="enter_new">Please enter New Password.</string>
    <string name="enter_confirm">Please enter Confirm Password.</string>
    <string name="details_updated_succ">Details updated successfully.</string>
    <string name="txt_rating_count">( %2$d )</string>
    <string name="txt_rating_bracket_start">( </string>
    <string name="txt_rating_bracket_end"> )</string>
    <string name="txt_rate_me"><u>Rate &amp; Review</u></string>
    <string name="cd_header_title">Directions</string>
    <string name="cd_info_incorrect">If you think any of the above information is incorrect </string>
    <string name="cd_report_an_error"><u>Report an error</u></string>
    <string name="cd_error_enable_gps">Please enable your GPS Settings.</string>
    <string name="cd_error_location_not_found">Unable to find your location. Please try again.</string>
    <string name="cd_error_sensor_not_found">Your device does not support this feature.</string>
    <string name="txt_tnc"><u>Terms &amp; Conditions</u></string>
    <string name="cd_view_more">View more</string>
    <string name="cd_write_review"><u>Write a Review</u></string>
    <string name="cd_no_review">No review(s)</string>
    <string name="cd_msg_data_usage">You might incur data charges for use beyond this point.</string>
    <string name="cd_msg_add_to_fav">Please log in first to add this company to your favourite list.</string>
    <string name="cd_msg_remove_from_fav">Please log in first to remove this company to your favourite list.</string>
    <string name="fav_companies_found"><u>listing(s) added as your favourites.</u></string>
    <string name="fav_companies__no_found"><u>No listing added as your favourite.</u></string>
    <string name="fav_companies_remove_confirmation">Do you wish to remove this company from your favourite list?</string>
    <string name="fav_companies_plz_select">Please make a selection first.</string>
    <string name="selected_company_remove_from_fav">The selected companies have been removed from your favourite list.</string>
    <string name="company_add_to_fav">Company added as your favourite.</string>
    <string name="company_remove_from_fav">Company removed from your favourite list.</string>
    <string name="confirm_btn">Confirm</string>
    <string name="cancel_btn">Cancel</string>
    <string name="post_deal">Post a Deal</string>
    <string name="deal_applicable_in">Applicable In</string>
    <string name="entire_malaysia">Entire Malaysia</string>
    <string name="selective_cities">Selective Cities</string>
    <string name="city">City(s)</string>
    <string name="locality">Outlet(s)</string>
    <string name="type_of_deal">Type Of Deal</string>
    <string name="informative">Informative</string>
    <string name="voucher">Voucher</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="specific_count">Specific Count</string>
    <string name="unlimited_codes">Unlimited Codes</string>
    <string name="count">Count</string>
    <string name="voucher_type">Voucher Type</string>
    <string name="single_code">Single Code</string>
    <string name="system_generated">System Generated</string>
    <string name="provided_by_sme">Provided By SME</string>
    <string name="voucher_code">Voucher Code</string>
    <string name="provided_by_sme_email_alert">An email containing the voucher code file uploading details will be sent to you.</string>
    <string name="cover_image">Cover Image</string>
    <string name="close_cover_image">Close Cover Image</string>
    <string name="first_image">First Image</string>
    <string name="close_first_image">Close First Image</string>
    <string name="second_image">Second Image</string>
    <string name="close_second_image">Close Second Image</string>
    <string name="third_image">Third Image</string>
    <string name="close_third_image">Close Third Image</string>
    <string name="remove_image_confirmation">Do you wish to remove this image from your deal?</string>
    <string name="type_colon">Type :</string>
    <string name="active">Active</string>
    <string name="apply">Apply</string>
    <string name="address">Address</string>
    <string name="best_price">Best Price</string>
    <string name="billing_number">Billing number :</string>
    <string name="captcha">Captcha</string>
    <string name="category">Category</string>
    <string name="category_colon">Category :</string>
    <string name="cancel">Cancel</string>
    <string name="later">Later</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="choose_company">Choose Company</string>
    <string name="choose_category">Choose Category</string>
    <string name="communication_failure">No Result Found.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="call">Call</string>
    <string name="classifieds">Classifieds</string>
    <string name="colon">:</string>
    <string name="contact_unavailable">Contact Number is not available.</string>
    <string name="contact_detail">Contact Details</string>
    <string name="contact">TEL</string>
    <string name="contact_channels">Contact Channels</string>
    <string name="company_details">Company Details -</string>
    <string name="current_list_type">Current Listing Type -</string>
    <string name="date_format">"YYYY-MM-DD"</string>
    <string name="dear_guest">Dear Guest</string>
    <string name="dear">Dear</string>
    <string name="deals">Deals</string>
    <string name="deal_desc">Deal Description</string>
    <string name="deal_title">Deal Title</string>
    <string name="deal_unavailable">Deals Unavailable</string>
    <string name="distance">Distance</string>
    <string name="email_desc_reg">* To  receive communications on e-mail</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_underline"><u>Edit</u></string>
    <string name="email">Email</string>
    <string name="emai_id">E-mail ID :</string>
    <string name="english">English</string>
    <string name="enter_name_msg">Please enter name</string>
    <string name="enter_redemption_detail">Enter Redemption Detail</string>
    <string name="enter_basic_detail">Enter Basic Detail</string>
    <string name="follow_us">Follow us </string>
    <string name="forward_comm_to">Forward communications to :</string>
    <string name="free">Free</string>
    <string name="fill_detail_selling1">Please furnish the</string>
    <string name="fill_detail_selling2">details to post your Ad</string>
    <string name="inactive">Inactive</string>
    <string name="input_search">Please Enter Search Keyword</string>
    <string name="name_empty">Please enter your Name.</string>
    <string name="number_empty">Please enter Mobile Number.</string>
    <string name="invalid_mobile">Please enter a valid Mobile Number.</string>
    <string name="internal_error">Oops! Something went wrong, please try again later.</string>
    <string name="kms">km away</string>
    <string name="less"><u>Less</u></string>
    <string name="leads_unavailable">Leads Unavailable</string>
    <string name="login">Sign In</string>
    <string name="local_search">Local Search</string>
    <string name="language">Language</string>
    <string name="more"><u>More</u></string>
    <string name="menu_settings">Settings</string>
    <string name="map">Map</string>
    <string name="manage_ur_ac">Manage Account</string>
    <string name="manage_alert">Manage Alert</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="malay">Malay</string>
    <string name="my_advert">My Adverts</string>
    <string name="my_leads">My Leads</string>
    <string name="my_deals">My Deals</string>
    <string name="new_passwd">New Password</string>
    <string name="name">Name</string>
    <string name="no">No</string>
    <string name="not_verified"><u>Not Verified</u></string>
    <string name="no_result_found">No Result Found</string>
    <string name="server_not_responding">Server not responding.</string>
    <string name="network_unavailable">Error occurred while fetching data from network. Please try again later.</string>
    <string name="ok">OK</string>
    <string name="update">Update</string>
    <string name="req_to_remove_under"><u>Request to remove listing</u></string>
    <string name="submit">Submit</string>
    <string name="upgrade_to_prem">Upgrade to premium</string>
    <string name="view_lead_underline"><u>View Leads</u></string>
    <string name="rc_rate_me">Rate Us</string>
    <string name="rc_write_review">Write your review</string>
    <string name="rc_tap_stars">Tap stars to give your rating</string>
    <string name="rc_provide_review">Please provide your review about %s in maximum 250 words.</string>
    <string name="rc_review_moderation">Your review will be submitted for moderation before publishing.</string>
    <string name="rc_char_count">( 250 characters )</string>
    <string name="app_update_message">New version of app is available in Play Store.</string>
    <string name="app_update_message_part2">To use this feature please update to the latest version of application.</string>
</resources>