<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_top"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/dialog_header"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_middle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/dialog_content"
                android:text="@string/app_update_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                />

            <TextView
                android:id="@+id/dialog_content_part2"
                android:text="@string/app_update_message_part2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bottom"
        android:layout_gravity="center_vertical"
        android:padding="10dp" >

        <Button
            android:id="@+id/dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_dialog_positive"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/update"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_dialog_negative"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/later"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>